--- a/style.css
+++ b/style.css
@@ -22,6 +22,15 @@ html, body {
     line-height: 18px;
     border-radius: 6px;
 }
+h3 {
+    font-weight: 700;
+    font-size: 35px;
+    line-height: 41px;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 0.2px;
+    color: #202020;
+}
 header {
     display: flex;
     justify-content: center;
@@ -241,4 +250,43 @@ main {
 .description .benefitsButton {
     margin-top: 32px;
     width: 373px;
+}
+.districtStructure {
+    margin-top: 91px;
+}
+.districtStructure img {
+    margin-top: 37px;
+}
+.districtStructure .districtButton {
+    margin-top: 39px;
+    width: 268px;
+}
+.villageBenefits {
+    margin-top: 91px;
+}
+.villageBenefits .benefitsGallery {
+    margin-top: 35px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.benefitsGallery .benefitsGallery-item {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 28px;
+}
+.benefitsGallery-item span {
+    border-left: 2px solid var(--main-green);
+    min-height: 59px;
+    display: flex;
+    align-items: center;
+    padding-left: 25px;
+    height: 100%;
+    width: 100%;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 21px;
+    text-transform: uppercase;
+    color: #202020;
 }
