--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ html, body {
     line-height: 18px;
     border-radius: 6px;
 }
+.buttons:hover {
+    color: #000;
+}
 h3 {
     font-weight: 700;
     font-size: 35px;
@@ -254,9 +257,11 @@ main {
 }
 .districtStructure {
     margin-top: 91px;
+    display: flex;
 }
 .districtStructure img {
     margin-top: 37px;
+    width: 100%;
 }
 .districtStructure .districtButton {
     margin-top: 39px;
@@ -410,6 +415,7 @@ main {
 .gallery-item {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 footer {
     width: 100%;
@@ -427,6 +433,9 @@ footer .footerContactsContainer {
 footer .footerContacts {
     margin-top: 60px;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 footer .footerPhone {
     display: flex;
@@ -476,4 +485,190 @@ footer .footerAdres span {
 }
 footer .footerLogo {
     margin-top: 50px;
+}
+#menu {
+    z-index: 2;
+    position: fixed;
+    display: none;
+}
+#menu-bar {
+    width: 45px;
+    height: 40px;
+    margin: 30px 0 20px 10px;
+    cursor: pointer;
+    position: fixed; 
+    z-index: 12; 
+}
+.bar {
+    height: 5px;
+    width: 100%;
+    background-color: var(--main-green);
+    display: block;
+    border-radius: 5px;
+    transition: 0.3s ease;
+}
+#bar1 {
+    transform: translateY(-4px);
+}
+#bar3 {
+    transform: translateY(4px);
+}
+.nav {
+    transition: 0.3s ease;
+    display: none;
+    position: fixed;
+}
+.nav ul {
+    padding: 0 22px;
+    margin-top: 70px;
+}
+.nav li {
+    list-style: none;
+    padding: 12px 0;
+}
+.nav li a {
+    color: white;
+    font-size: 20px;
+    text-decoration: none;
+}
+.nav li a:hover {
+    font-weight: bold;
+}
+.menu-bg, #menu {
+    top: 0;
+    left: 0;
+    position: absolute;
+}
+.menu-bg {
+    z-index: 1;
+    width: 0;
+    height: 0;
+    margin: 30px 0 20px 40px;
+    background: radial-gradient(circle, var(--main-green), var(--main-green));
+    border-radius: 50%;
+    transition: 0.3s ease;
+    position: fixed;
+}
+.change {
+    display: block;
+    position: fixed;
+}
+.change .bar {
+    background-color: white;
+}
+.change #bar1 {
+    transform: translateY(4px) rotateZ(-45deg);
+}
+.change #bar2 {
+    opacity: 0;
+}
+.change #bar3 {
+    transform: translateY(-6px) rotateZ(45deg);
+}
+.change-bg {
+    width: 520px;
+    height: 460px;
+    transform: translate(-60%,-30%);
+}
+@media (max-width: 1140px) {
+    h1 {
+        font-size: 1.5em !important;
+    }
+    h2 {
+        font-size: 1.5em !important;
+    }
+    h3 {
+        font-size: 1.5em;
+    }
+    .gallery-item {
+        justify-content: center;
+        gap: 30px;
+    }
+    .gallery-item:nth-child(1) {
+        gap: 29px;
+    }
+    .footerContactsContainer {
+        flex-direction: column-reverse !important;
+        align-items: center;
+    }
+    .footerContacts {
+        align-items: center
+    }
+    .footerLogo {
+        width: 90%;
+    }
+}
+@media (max-width: 960px) {
+    .description .mainWrapper {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+    .description .mainWrapper h3 {
+        margin-right: 0;
+    }
+    .howToBuyItems {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .description .mainWrapper .benefits {
+        margin-bottom: 20px;
+    }
+}
+@media (max-width: 870px) {
+    .navBar {
+        display: none;
+    }
+    #menu {
+        display: block;
+    }
+}
+@media (max-width: 750px) {
+    .info .info-item {
+        width: 50%;
+        align-items: center;
+    }
+    .info .info-item:last-child {
+        width: 100%;
+    }
+    .info .mainWrapper {
+        flex-wrap: wrap;
+    }
+    .villageBenefits .benefitsGallery {
+        justify-content: center;
+    }
+    .wideImage {
+        width: 100%;
+    }
+}
+@media (max-width: 630px) {
+    .hypotec .mainWrapper {
+        flex-direction: column;
+        align-items: center;
+    }
+    .hypotec .hypotecContacts {
+        margin-left: 0;
+    }
+}
+@media (max-width: 590px) {
+    .headerContainer .logo-navBar, .headerContainer .logo {
+        flex-direction: column;
+    }
+    h1, h2 {
+        text-align: center;
+    }
+    .headerContainer .headerTitle {
+        align-items: center;
+    }
+    .description .benefits .benefitsButton {
+        width: 15em;
+        margin-left: 50px;
+
+    }
+}
+@media (max-width: 380px) {
+    footer .footerPhone {
+        flex-direction: column;
+        gap: 10px;
+    }
 }
