--- a/style.css
+++ b/style.css
@@ -627,6 +627,10 @@ footer .footerLogo {
     .info .info-item {
         width: 50%;
         align-items: center;
+        margin-bottom: 10px;
+    }
+    .info .info-item .itemUpper span {
+        font-size: 3em;
     }
     .info .info-item:last-child {
         width: 100%;
@@ -667,6 +671,10 @@ footer .footerLogo {
     }
 }
 @media (max-width: 380px) {
+    .info .info-item {
+        width: 100%;
+        align-items: center;
+    }
     footer .footerPhone {
         flex-direction: column;
         gap: 10px;
@@ -677,7 +685,5 @@ footer .footerLogo {
     .description .mainWrapper h3 {
         padding-left: 20px;
         padding-right: 20px;
-    }
-    .hypotec .hypotecContacts input {
     }
 }
