--- a/style.css
+++ b/style.css
@@ -594,9 +594,6 @@ footer .footerLogo {
     .footerContacts {
         align-items: center
     }
-    .footerLogo {
-        width: 90%;
-    }
 }
 @media (max-width: 960px) {
     .description .mainWrapper {
@@ -613,6 +610,9 @@ footer .footerLogo {
     }
     .description .mainWrapper .benefits {
         margin-bottom: 20px;
+    }
+    .description ul {
+        gap: 40px;
     }
 }
 @media (max-width: 870px) {
@@ -652,6 +652,10 @@ footer .footerLogo {
     }
     .hypotec .hypotecContacts {
         margin-left: 0;
+        margin-bottom: 30px;
+    }
+    header .logo {
+        gap: 30px;
     }
 }
 @media (max-width: 590px) {
@@ -660,6 +664,7 @@ footer .footerLogo {
     }
     h1, h2 {
         text-align: center;
+        padding: 0 18px;
     }
     .headerContainer .headerTitle {
         align-items: center;
@@ -667,13 +672,17 @@ footer .footerLogo {
     .description .benefits .benefitsButton {
         width: 15em;
         margin-left: 50px;
-
+    }
+    .headerTitle .rentButton {
+        margin-bottom: 30px;
     }
 }
 @media (max-width: 380px) {
     .info .info-item {
         width: 100%;
         align-items: center;
+        margin-bottom: 30px;
+        text-align: center;
     }
     footer .footerPhone {
         flex-direction: column;
@@ -685,5 +694,8 @@ footer .footerLogo {
     .description .mainWrapper h3 {
         padding-left: 20px;
         padding-right: 20px;
+    }
+    .info-item .itemUpper {
+        flex-direction: column;
     }
 }
