--- a/style.css
+++ b/style.css
@@ -631,6 +631,10 @@ footer .footerLogo {
     }
 }
 @media (max-width: 750px) {
+    .info .mainWrapper {
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
     .info .info-item {
         width: 50%;
         align-items: center;
